# argus

./: .licenseignore  .mise.toml  CHANGELOG.md  Package.swift  README.md  cliff.toml
.github/workflows/: release.yml
Sources/SWBBuildService/: BuildServiceEntryPoint.swift  DependencyGraphMessages.swift
Sources/SWBBuildSystem/: BuildOperation.swift  TaskExecutionLogger.swift
Sources/SWBProtocol/: DependencyGraphMessages.swift
Sources/SWBServiceCore/: BuildTraceCLI.swift  BuildTraceDatabase.swift  BuildTraceRecorder.swift  CMakeLists.txt  ImportSourceCodeScanner.swift  Service.swift
Sources/SWBTaskConstruction/ProductPlanning/: BuildPlan.swift  ProductPlan.swift
Sources/SWBTaskExecution/: BuildDescription.swift  BuildDescriptionManager.swift  BuildDescriptionPerformanceLogger.swift
Sources/SWBUtil/: BuildDescriptionPerformanceLogger.swift  CMakeLists.txt
Tests/SWBServiceCoreTests/: BuildTraceGraphTests.swift
